@@ -40,9 +40,9 @@ if (!isset($gallery)) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = '1.4.1-cvs-b204';
+$gallery->version = '1.4.1-cvs-b205';
 $gallery->config_version = 75;
-$gallery->album_version = 24;
+$gallery->album_version = 25;
 $gallery->user_version = 5;
 $gallery->url = "http://gallery.sourceforge.net";
 
